<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AC_Title"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bo_vien"/>
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/AC_Des"
        android:lines="3"
        android:gravity="top"
        android:background="@drawable/bo_vien"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/AC_tv1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvText_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="12:33"
            android:gravity="center"
            android:ems="10" />
        <TextView
            android:id="@+id/tvText_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="12/06/2021"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AC_tv2"
            />
        <Spinner
            android:id="@+id/spnType"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AC_tv3"
            />
        <TextView
            android:id="@+id/btnMutiChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Muntils_choie"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AC_tv4"
            />
        <TextView
            android:id="@+id/btnMutiChoose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Muntils_choie"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnPopupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AC_btnPopup"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textAllCaps="false"/>
</LinearLayout>
</layout>